N°4481 - Portal: Fix overflowing tables in logs

--- a/datamodels/2.x/itop-portal-base/portal/public/css/variables.scss
+++ b/datamodels/2.x/itop-portal-base/portal/public/css/variables.scss
@@ -943,6 +943,8 @@ $hr-border:                   $gray-lighter !default;
 //
 //##
 
+$messaging-block-medallion-size: 40px !default;
+$messaging-block-entries-margin-x: 60px !default;
 $messaging-self-primary-color: $combodo-dark-gray !default;
 $messaging-self-secondary-color: $white !default;
 $messaging-1st-peer-primary-color: $white !default;
